modified css file

--- a/src/style.css
+++ b/src/style.css
@@ -331,7 +331,7 @@ html {
   padding-top: 50px;
   font-size: 1.2em !important;
   text-align: left;
-  padding-left: 8em;
+  /* padding-left: 8em; */
 }
 
 .home-about-social {
